<resources>
    <string name="app_name">FlashCards</string>
    <string name="materia">Subject</string>
    <string name="limpar">Clean</string>
    <string name="adicionar">Add</string>
    <string name="erro_materia">Field subject can\'t be null</string>
    <string name="erro_frequencia_estudo">Field frequency can\'t be null</string>
    <string-array name="tipo_array">
        <item>College</item>
        <item>Public tender</item>
        <item>School</item>
    </string-array>
    <string name="diario">Daily</string>
    <string name="frequencia_estudo">Study frequency</string>
    <string name="ativo">Active</string>
    <string name="salvar">Save</string>
    <string name="title_activity_listagem_materias">ListagemMateriasActivity</string>
    <string name="tipo">Type</string>
    <string name="faculdade">College</string>
    <string name="colegio">School</string>
    <string name="concurso">Public Tender</string>
    <string name="materia_nome">"Subject: "</string>
    <string name="frequencia_nome">"Frequency: "</string>
    <string name="tipo_nome">"Type: "</string>
    <string name="foi_clicada">It has been clicked!</string>
    <string name="autor">"Author: "</string>
    <string name="nome">"Name: "</string>
    <string name="curso">"Course: "</string>
    <string name="email">"E-mail: "</string>
    <string name="descricao">"Description: "</string>
    <string name="nome_autor">João Pedro Orlando</string>
    <string name="email_autor">joaoorlando@alunos.utfpr.edu.br</string>
    <string name="curso_autor">Post Degree Java Technology</string>
    <string name="descricao_autor">App for study with flashcards</string>
    <string name="sobre">About</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="configuracoes">Configurations</string>
    <string name="selecao_idioma">"Default Language: "</string>
    <string name="ordem_lista">"Listing order by subject: "</string>
    <string-array name="idioma">
        <item>ENG</item>
        <item>PT-BR</item>
    </string-array>
    <string-array name="theme_mode">
        <item>LIGHT</item>
        <item>DARK</item>
    </string-array>
    <string name="salvo_sucesso">Save successfully!</string>
    <string name="semanal">Weekly</string>
    <string name="mensal">Monthly</string>
    <string name="exibe_numero_itens_lista">Show subject\'s list number</string>
    <string name="theme_mode">"Theme mode: "</string>
    <string name="nome_materia">Subject name</string>
    <string name="sim">Confirm</string>
    <string name="nao">Cancel</string>
    <string name="confirma_delecao">Do you really want to delete the record?</string>
    <string name="aviso">Alert</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="confirmacao">Confirm</string>
</resources>
